--- a/index.html
+++ b/index.html
@@ -1,45 +1,80 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Coding Quiz</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      <header>
-        <nav class="nav nav1 my-2">
-          <a class="nav-link nav1" href="#">View Highscores</a>
-          <a class="timer nav-link nav1" style="margin-left:auto;">Time: <span id="seconds">0</span> seconds </a>
-        </nav>
-      </header>
-      
-      <main>
-          <div id="landing-container" class="container text-center my-5">
-            <h1>Coding Quiz Challenge</h1>
-            <br>
-            <p class="instruction">
-                Try to answer all the questions before the time runs out. Each wrong answer will result in a 10
-                second subtraction from the timer. The faster you are the higher your score will be. Good Luck! 
-            </p>
-            <button type="button" id="start-button" class="btn btn-primary my-3 btn1" style="font-size:25px; background-color: darkblue;" href="#" role="button">Start Quiz</button>
-          </div>
+<head>
+  <title>Coding Quiz</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-          <div id="quiz-container" class="container">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 
-          </div>
+<body>
+  <header>
+    <nav class="nav nav1 my-2">
+      <a class="nav-link nav1" href="#">View Highscores</a>
+      <a class="timer nav-link nav1" style="margin-left:auto;">Time: <span id="seconds">0</span> seconds </a>
+    </nav>
+  </header>
 
-          <div id="highscore-container" class="container"
-      </main>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+  <main>
+    <div id="landing-container" class="container text-center my-5">
+      <h1>Coding Quiz Challenge</h1>
+      <br>
+      <p class="instruction">
+        Try to answer all the questions before the time runs out. Each wrong answer will result in a 10
+        second subtraction from the timer. The faster you are the higher your score will be. Good Luck!
+      </p>
+      <button type="button" id="start-button" class="btn btn-primary my-3"
+        style="font-size:25px; background-color: darkblue;" href="#" role="button">Start Quiz</button>
+    </div>
+
+    <div id="quiz-container" class="container d-none">
+      <!-- Question -->
+      <div class="row">
+        <div id=question-header class="col-md-12 mx-auto my-5 text-center" style="font-size:30px;">Question</div>
+      </div>
+      <!-- Choices -->
+      <div class="row">
+        <div id="choices" class="col-md-6 btn-group-vertical mx-auto">
+          <button type="button" id="choice-button1" class="btn btn-primary my-1 btn1" style="font-size:25px; background-color: darkblue;" href="#" role="button"></button>
+          <button type="button" id="choice-button2" class="btn btn-primary my-1 btn1" style="font-size:25px; background-color: darkblue;" href="#" role="button"></button>
+          <button type="button" id="choice-button3" class="btn btn-primary my-1 btn1" style="font-size:25px; background-color: darkblue;" href="#" role="button"></button>
+          <button type="button" id="choice-button4" class="btn btn-primary my-1 btn1" style="font-size:25px; background-color: darkblue;" href="#" role="button"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div id="clickResponse" class="col-md-6 mx-auto text-center my-4" style="font-size:20px; font-style:italic;">
+          
+        </div>
+      </div>
+
+
+
+
+    </div>
+
+
+    <div id="highscore-container" class="container d-none">
+      <p>Highschore-Container</p>
+    </div>
+  </main>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <script src="index.js"></script>
 </body>
+
 </html>
